Fix tiny misalignment on empty boxes

--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,7 @@
     border-radius: 3px;
     height: 110px;
     width: 110px;
+    vertical-align: top;
 }
 .pool .square {
     border-color: orange;
